# project1

./: .gitignore  README.md  conftest.py  pyproject.toml
pages/: base_page.py  login_page.py
tests/: test_checkbox.py  test_expected_bugs.py  test_links.py  test_login.py  test_password.py
